overlapptext-strategy-name-fixes-CRPT-1560

--- a/app/assets/stylesheets/campaign_list.less
+++ b/app/assets/stylesheets/campaign_list.less
@@ -1942,6 +1942,7 @@ button, i, input[type="submit"] {
           color: #000 ;
           line-height: 24px ;
           font-weight: bold ;
+          word-wrap: break-word;
           a {
             color: #000;
             text-decoration: none;
